--- a/src/index.css
+++ b/src/index.css
@@ -109,11 +109,13 @@ input:focus {
 .todo-card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  background-color: #e3e1e6;
+  /* background-color: #e3e1e6; */
+  background-color: #e6e3ff;
   width: 85%;
   margin: 1em 0;
   border: none;
   border-radius: 10px;
+  display: flex;
 }
 
 .todo-card:hover {
@@ -132,6 +134,21 @@ input:focus {
   font-size: 1.25rem;
 }
 
+.dot {
+  color: #fff;
+  border: 1px solid #262626;
+  border-radius: 50%;
+  width: 13px;
+  height: 13px;
+  display: inline-block;
+  align-self: center;
+  margin: 0 0.3em;
+}
+
+.completed-dot {
+  background-color: #00b043;
+  border: none;
+}
 /* .hashtag-style {
   display: block;
   z-index: 1;
@@ -151,7 +168,7 @@ input:focus {
   background-color: #cbf5da;
   background-color: #cbf5da;
   border: none;
-  padding: 0.2em 0.5em;
+  padding: 0.1em 0.4em;
   border-radius: 10px;
   cursor: pointer;
 }
@@ -178,13 +195,17 @@ input:focus {
     width: 80vw;
     margin: 2rem auto;
     border-radius: 5px;
-    min-height: 60vh;
+    min-height: 80vh;
   }
 }
 
 @media (min-width : 732px) {
   h3 {
     font-size: 2.5rem;
+  }
+
+  .container {
+    margin-top: 4rem;
   }
 
   .heading {
@@ -195,6 +216,95 @@ input:focus {
   .reset-button {
     padding: 0.5em 1.1em;
     font-size: 1.2rem;
+  }
+
+  .form-field {
+    padding: 1.5em 0.75em;
+    margin: 0.7em;
+    padding-bottom: 0.7em;
+  }
+
+  input[type=text] {
+    width: 90%;
+    padding: 10px 10px;
+    font-size: 1.3rem;
+  }
+  
+  .todo-button {
+    padding: 0.2em 0.6em;
+  }
+  
+  .todo-container {
+    padding: 0.7em 0.75em;
+    margin: 0.7em;
+    margin-bottom: 0;
+  }
+  
+  .filter-container {
+    padding-bottom: 0.6em;
+  }
+  
+  .reset-filter-button {
+    padding: 0.2em 0.7em;
+    font-size: 1rem;
+  }
+
+  .filtering-list,
+  .hashtag-style {
+    background-color: #d9c7f0;
+    color: #9356f5;
+    margin: 0 4px;
+    font-size: 1.2rem;
+  }
+  
+  .filter-text{
+    align-self: flex-end;
+  }
+
+  .dot {
+    width: 16px;
+    height: 16px;
+    margin: 0 0.5em;
+  }
+  
+  .todo-card {
+    width: 90%;
+    margin: 1em 0;
+  }
+  
+  .todo-card li {
+    padding: 0.8em 0.5em;
+    font-size: 1.5rem;
+  }
+  
+  .delete-button {
+    margin: 1.3em 0;
+    padding: 0.2em 0.8em;
+  }
+  
+  .completed-container {
+    padding: 0.7em 0.75em;
+    margin: 0.7em;
+    margin-top: 0;
+  }
+  
+  .completed-heading {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+  }
+  
+  
+}
+
+@media (min-width: 968px) {
+  .container {
+    width: 60vw;
+    margin-top: 5rem;
+  }
+
+  .reset-button {
+    padding: 0.6em 1.3em;
+    font-size: 1.3rem;
   }
 
   .style-reset {
@@ -244,6 +354,12 @@ input:focus {
   .filter-text{
     align-self: flex-end;
   }
+
+  .dot {
+    width: 20px;
+    height: 20px;
+    margin: 0 0.8em;
+  }
   
   .todo-card {
     width: 90%;
@@ -269,16 +385,5 @@ input:focus {
     font-size: 2rem;
     margin-bottom: 1rem;
   }
-  
-}
 
-@media (min-width: 968px) {
-  .container {
-    width: 60vw;
-  }
-
-  .reset-button {
-    padding: 0.7em 1.5em;
-    font-size: 1.5rem;
-  }
 }
